﻿9.11 -> 9.12
XX/10/2015

Balance changes:
- Increase cost of Annihilator by 10%
- Increase cost of Doomsday Machine by 15%

Others:
- Added "No Tactical Pause" gadget - prevents sending orders when game is paused


9.10 -> 9.11
16/10/2015

Balance changes:
- EMP'd will drain some energy (t1 storage - 60E, t2 storage - 400E)
- EMP'd metal storage will not store + will waste stored metal if you had more then you can hold without emped storage
- Improved "passive builders" gadget: solars will be build even you have no energy
- Enemy unit napping (except commanders) is enabled by default (you can disable in host settings)
- EMP spider regenerates faster (20 -> 30)
- Return "old" weapons to T2 missile ships
- T1 metal storage have 10% more HP

Others:
- Atomic bombers are not crashing anymore(to prevent shooting bug)
- Show enemy commander counter by default
- New widgets: "External VR grid" and "Map Edge extension" (disabled by default)
- New widget: "Team stats" button (disabled by default)


9.09 -> 9.10
25/09/2015

Balance changes:
- EMP spider regenerates HP
- Commander's capture speed increased 2x (900 -> 1800)
- Decoy commander can capture (900)
- Fidos are turned ON by default

Others:
- Pause screen text is more visible
- Widget selector: when clicked outside widgetlist/links: hiding screen
- Advplayerlist mascotte, added: Meowl
- Bugfixes


9.08 -> 9.09
18/09/2015

Balance changes:
- Increased range of arm emp spider (220 -> 280)
- T2 spiders (Termite, Recluse, Spider) are more EMP resistant
- Removed rockets wobbling for ARM "All-Terrain Rocket Spider"(Recluse) and added 1 more rocket (3 -> 4)

Others:
- Added new widget "vignette" (darker at screen edges)
- Added widget "AdvPlayersList mascotte"
- Restyled "widget selector" (F11)
- Increased performance for "anti ranges", "energy conversion" and "red ui drawing" widgets


9.07 -> 9.08
11/09/2015

Balance changes:
- Fixed Gimp (t2 amph kbot) sonar visibility

Others:
- ecostats widget: restyled, fixed errors